drawinglayer/source/texture/texture3d.cxx
@@ -103,7 +103,7 @@ namespace drawinglayer::texture
         {
         }
 
-        sal_uInt8 GeoTexSvxBitmapEx::impGetTransparence(sal_Int32 rX, sal_Int32 rY) const
+        sal_uInt8 GeoTexSvxBitmapEx::impGetAlpha(sal_Int32 rX, sal_Int32 rY) const
         {
             if(mbIsAlpha)
             {
@@ -148,10 +148,10 @@ namespace drawinglayer::texture
 
                 if(mbIsAlpha)
                 {
-                    // when we have a transparence, make use of it
-                    const sal_uInt8 aLuminance(impGetTransparence(nX, nY));
+                    // when we have alpha, make use of it
+                    const sal_uInt8 aAlpha(impGetAlpha(nX, nY));
 
-                    rfOpacity = (static_cast<double>(0xff - aLuminance) * (1.0 / 255.0));
+                    rfOpacity = (static_cast<double>(aAlpha) * (1.0 / 255.0));
                 }
                 else
                 {
@@ -173,8 +173,8 @@ namespace drawinglayer::texture
                 if(mbIsAlpha)
                 {
                     // this texture has an alpha part, use it
-                    const sal_uInt8 aLuminance(impGetTransparence(nX, nY));
-                    const double fNewOpacity(static_cast<double>(0xff - aLuminance) * (1.0 / 255.0));
+                    const sal_uInt8 aAlpha(impGetAlpha(nX, nY));
+                    const double fNewOpacity(static_cast<double>(aAlpha) * (1.0 / 255.0));
 
                     rfOpacity = 1.0 - ((1.0 - fNewOpacity) * (1.0 - rfOpacity));
                 }
